Allow filterying by country codes